tdf#166152 sw: Fix for SwScriptInfo corruption on incremental update

This change fixes a regression in SwScriptInfo::InitScriptInfo, which
was causing some data structures to be populated with duplicated entries
following an incremental update.

Regression from 537645c0834eab2d277113f1e3fcf039c994832d
"tdf#66791 sw: Treat weak punctuation as Asian in Asian paragraphs"

Change-Id: I364effe5579bff35eb7693684e732eafb284d7e0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184151
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184202
(cherry picked from commit d930984b527f63cd105e92d1df9813e5508a82ad)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184489
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>